--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -32,29 +32,31 @@
 			<input type="email" class="form-control" id="my_accountEmail1" value="{{user.email}}" aria-describedby="emailHelp" placeholder="Enter your Email">
 		</div>
 	</form>
-	<br />
-	<h3>Change Password</h3>
-	<form class="mb-3" action="change_password/" method="post">
-		{% csrf_token %}
-		<div class="form-row">
-            <div class="form-group col-md-12">
-                <label for="changepass_currentpass">Your Password</label>
-                <input required type="password" class="form-control" id="changepass_currentpass" name="changepass_currentpass" placeholder="Your Password">
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="changepass_newpass">New Password</label>
-                <input required type="password" class="form-control" id="changepass_newpass"  name="changepass_newpass" placeholder="New Password">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="changepass_newpassconfirm">Confirm New Password</label>
-                <input required type="password" class="form-control" id="changepass_newpassconfirm"  name="changepass_newpassconfirm" placeholder="Confirm New Password">
-             </div>
-        </div>
-        <button type="submit" class="btn btn-danger">Update</button>
-    </form>
-	<br />
-	<br />
+	<div>
+		<br />
+		<h3>Change Password</h3>
+		<form class="mb-3" action="change_password/" method="post">
+			{% csrf_token %}
+			<div class="form-row">
+				<div class="form-group col-md-12">
+					<label for="changepass_currentpass">Your Password</label>
+					<input required type="password" class="form-control" id="changepass_currentpass" name="changepass_currentpass" placeholder="Your Password">
+				</div>
+			</div>
+			<div class="form-row">
+				<div class="form-group col-md-6">
+					<label for="changepass_newpass">New Password</label>
+					<input required type="password" class="form-control" id="changepass_newpass"  name="changepass_newpass" placeholder="New Password">
+				</div>
+				<div class="form-group col-md-6">
+					<label for="changepass_newpassconfirm">Confirm New Password</label>
+					<input required type="password" class="form-control" id="changepass_newpassconfirm"  name="changepass_newpassconfirm" placeholder="Confirm New Password">
+				 </div>
+			</div>
+			<button type="submit" class="btn btn-danger">Update</button>
+		</form>
+		<br />
+		<br />
+	</div>
 </div>
 {% endblock %}
