--- a/templates/base.html
+++ b/templates/base.html
@@ -121,27 +121,27 @@
 						{% csrf_token %}
 						<div class="form-group">
 							<label for="signUpUsername">Username</label>
-							<input type="text" required class="form-control" id="signUpUsername" name="signUpUsername" placeholder="Choose a Unique Username... (Lowercase & AlphaNumeric)">
+							<input type="text" required class="form-control" id="signUpUsername" name="signUpUsername" placeholder="Choose a Unique Username... (Lowercase & AlphaNumeric)" />
 						</div>
 						<div class="form-group">
 							<label for="fname">First Name</label>
-							<input type="text" required class="form-control" id="fname" name="fname" placeholder="Your First Name...">
+							<input type="text" required class="form-control" id="fname" name="fname" placeholder="Your First Name..." />
 						</div>
 						<div class="form-group">
 							<label for="lname">Last Name</label>
-							<input type="text" required class="form-control" id="lname" name="lname" placeholder="Your Last Name...">
+							<input type="text" required class="form-control" id="lname" name="lname" placeholder="Your Last Name..." />
 						</div>
 						<div class="form-group">
 							<label for="email">Email Address</label>
-							<input type="email" required class="form-control" id="email" name="email" placeholder="Your Email Address...">
+							<input type="email" required class="form-control" id="email" name="email" placeholder="Your Email Address..." />
 						</div>
 						<div class="form-group">
 							<label for="signUpPass1">Choose a Password</label>
-							<input type="password" required class="form-control" id="signUpPass1" name="signUpPass1" placeholder="Choose a Password...">
+							<input type="password" required class="form-control" id="signUpPass1" name="signUpPass1" placeholder="Choose a Password..." />
 						</div>
 						<div class="form-group">
 							<label for="signUpPass2">Confirm Password</label>
-							<input type="password" required class="form-control" id="signUpPass2" name="signUpPass2" placeholder="Enter your Password again...">
+							<input type="password" required class="form-control" id="signUpPass2" name="signUpPass2" placeholder="Enter your Password again..." />
 						</div>
 						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
 						<br />
@@ -167,11 +167,11 @@
 						{% csrf_token %}
 						<div class="form-group">
 							<label for="loginUsername">Username</label>
-							<input type="text" required class="form-control" id="loginUsername" name="loginUsername" placeholder="Enter your Username...">
+							<input type="text" required class="form-control" id="loginUsername" name="loginUsername" placeholder="Enter your Username..." />
 						</div>
 						<div class="form-group">
 							<label for="loginPass">Enter Password</label>
-							<input type="password" required class="form-control" id="loginPass" name="loginPass" placeholder="Enter your Password...">
+							<input type="password" required class="form-control" id="loginPass" name="loginPass" placeholder="Enter your Password..." />
 						</div>
 						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
 						<br />
