--- a/templates/base.html
+++ b/templates/base.html
@@ -56,34 +56,32 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-					<ul class="navbar-nav">
+					<ul class="navbar-nav mr-auto">
 						{% block navbarlink %}
 						{% endblock %}
-						<form method='get' action="/search/" class="form-inline mx-2 search__form">
-							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query" />
-							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-						</form>
-						<div class="ml-auto form-inline">
-							{% if user.is_authenticated %}
-								<ul class="navbar-nav">
-									<li class="nav-item dropdown give__margin_pls">
-										<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-											Welcome {{request.user}}
-										</a>
-										<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-											<a class="dropdown-item" href="/my_profile/my_account/">My Profile</a>
-											<a class="dropdown-item" href="/logout/">Logout</a>
-										</div>
-									</li>
-								</ul>
-							{% else %}
-								<div class="signupAndLogin_Buttons">
-									<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
-									<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
-								</div>
-							{% endif %}
-						</div>
 					</ul>
+					<form method='get' action="/search/" class="form-inline my-2 my-lg-0 mr-3">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query" />
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</form>
+					{% if user.is_authenticated %}
+						<ul class="navbar-nav navbar-default">
+							<li class="nav-item dropdown give__margin_pls">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Welcome {{request.user}}
+								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="/my_profile/my_account/">My Profile</a>
+									<a class="dropdown-item" href="/logout/">Logout</a>
+								</div>
+							</li>
+						</ul>
+					{% else %}
+						<div class="signupAndLogin_Buttons">
+							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
+							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
+						</div>
+					{% endif %}
 				</div>
             </nav>
 			{% if messages %}
