--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,10 @@
 						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 					</form>
 					{% if user.is_authenticated %}
+						<a class="text-light mx-3" href="/my_profile/notifications" role="button">
+							<i class="fa fa-bell fa-2x"></i>
+							<span class="badge notification-bell badge-danger"></span>
+						</a>
 						<ul class="navbar-nav navbar-default">
 							<li class="nav-item dropdown give__margin_pls">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -189,6 +193,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://kit.fontawesome.com/58a72d19b5.js" crossorigin="anonymous"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
