--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 					{% if user.is_authenticated %}
 						<a class="text-light mx-3" href="/my_profile/notifications" role="button">
 							<i class="fa fa-bell fa-2x"></i>
-							<span class="badge notification-bell badge-danger"></span>
+							<span class="badge notification-bell badge-danger">{{notifications_unread}}</span>
 						</a>
 						<ul class="navbar-nav navbar-default">
 							<li class="nav-item dropdown give__margin_pls">
