--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 					{% if user.is_authenticated %}
 						<a class="text-light mx-3" href="/my_profile/notifications" role="button">
 							<i class="fa fa-bell fa-2x"></i>
-							<span class="badge notification-bell badge-danger">{{notifications_unread}}</span>
+							<span class="badge notification-bell badge-danger"></span>
 						</a>
 						<ul class="navbar-nav navbar-default">
 							<li class="nav-item dropdown give__margin_pls">
@@ -97,7 +97,7 @@
 					<div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
 						<strong>Message: </strong> {{ message }}
 						<button type="button" class="close close_button" data-dismiss="alert" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
+						  <span aria-hidden="true">&times;</span>
 						</button>
 					</div>
 				{% endfor %}
@@ -105,7 +105,7 @@
 				<div class="alert alert-success alert-dismissible fade show" role="alert">
 					<strong>Welcome to my Website!!</strong>
 					<button type="button" class="close close_button" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
+					  <span aria-hidden="true">&times;</span>
 					</button>
 				</div>
 			{% endif %}
