--- a/templates/my_photos.html
+++ b/templates/my_photos.html
@@ -20,7 +20,7 @@
 			<div class="row">
 				{% for i in my_photo %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img src="/media/{{i.image}}" class="card-img-top" alt="image"/>
+						<img loading="lazy" src="/media/{{i.image}}" class="card-img-top" alt="image"/>
 						<div class="card-body">
 							<h5 class="card-title">
 								{{i.name}}
