--- a/templates/my_photos.html
+++ b/templates/my_photos.html
@@ -17,31 +17,35 @@
 	{% block body %}
 	<div class="container">
 		{% if user.is_authenticated %}
-			<div class="row">
-				{% for i in my_photo %}
-					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img loading="lazy" src="/media/{{i.image}}" class="card-img-top" alt="image"/>
-						<div class="card-body">
-							<h5 class="card-title">
-								{{i.name}}
-							</h5>
+			{% if permission %}
+				<div class="row">
+					{% for i in my_photo %}
+						<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+							<img loading="lazy" src="/media/{{i.image}}" class="card-img-top" alt="image"/>
+							<div class="card-body">
+								<h5 class="card-title">
+									{{i.name}}
+								</h5>
+							</div>
 						</div>
-					</div>
-				{% endfor %}
-			</div>
-			<div class="my-3">
-				{% if prev %}
-					<button class="btn btn-primary"><a class="text-light text-decoration-none" href="/my_photos?page={{prev}}">&laquo; Previous</a></button>
-				{% else %}
-					<button disabled class="btn btn-primary"><a class="text-light text-decoration-none">&laquo; Previous</a></button>
-				{% endif %}
-				
-				{% if nxt %}
-					<button class="btn btn-primary float-right"><a class="text-light text-decoration-none" href="/my_photos?page={{nxt}}">Next &raquo;</a></button>
-				{% else %}
-					<button disabled class="btn btn-primary float-right"><a class="text-light text-decoration-none">Next &raquo;</a></button>
-				{% endif %}
-			</div>
+					{% endfor %}
+				</div>
+				<div class="my-3">
+					{% if prev %}
+						<button class="btn btn-primary"><a class="text-light text-decoration-none" href="/my_photos?page={{prev}}">&laquo; Previous</a></button>
+					{% else %}
+						<button disabled class="btn btn-primary"><a class="text-light text-decoration-none">&laquo; Previous</a></button>
+					{% endif %}
+					
+					{% if nxt %}
+						<button class="btn btn-primary float-right"><a class="text-light text-decoration-none" href="/my_photos?page={{nxt}}">Next &raquo;</a></button>
+					{% else %}
+						<button disabled class="btn btn-primary float-right"><a class="text-light text-decoration-none">Next &raquo;</a></button>
+					{% endif %}
+				</div>
+			{% else %}
+				<center><h1>You don't have Permission.</h1></center>
+			{% endif %}
 		{% else %}
 			<center><h1>You need to Login or SignUp</h1></center>
 		{% endif %}
