--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="form-group">
                         <label for="desc">Describe what you want to contact me for here!!</label>
-                        <textarea type="text" required class="form-control" id="desc" placeholder="Your message" name="desc"></textarea>
+                        <textarea type="text" required class="form-control" id="desc" placeholder="Your Message  (MAX: 500 Keywords)" name="desc"></textarea>
                     </div>
 					<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
                     <button type="submit" class="btn btn-primary mt-2">Submit</button>
