--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-	<link rel="icon" type="image/png" href="https://avatars0.githubusercontent.com/u/70377522?s=60&v=4">
+	<link rel="icon" type="image/png" href="{% static 'images/logo.jpg' %}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<link rel="stylesheet" href="{% static 'styles/base.css' %}">
     <title>JAK Website | {% block title%} {% endblock %}</title>
