--- a/templates/social_media.html
+++ b/templates/social_media.html
@@ -65,7 +65,7 @@
                     <p class="card-text text-center">
 						Join my Discord Community!!
                     </p>
-                    <a href="https://discord.gg/aUHNyYUn" class="btn btn-primary d-block">Go to My Discord</a>
+                    <a href="https://discord.gg/S3UfGkW" class="btn btn-primary d-block">Go to My Discord</a>
 					<br/>
                     <a href="https://discord.com/oauth2/authorize?client_id=756402881913028689&scope=bot" class="btn btn-primary d-block">Invite My Bot</a>
                 </div>
